<resources>
    <string name="app_name">"Custodian"</string>
    <string name="input_min">"Минимальный показатель нормы"</string>
    <string name="input_max">"Максимальный показатель нормы"</string>
    <string name="input_name">"Ваше имя"</string>
    <string name="shared_preference">"ru.itx.kumov.custodian.shared"</string>
    <string name="MAX">"max_value"</string>
    <string name="MIN">"min_value"</string>
    <string name="NAME">"name_value"</string>
    <string name="m_anketa">"Данные пользователя"</string>
    <string name="m_add">"Добавить показания"</string>
    <string name="m_graph">"График показаний"</string>
     <string name="m_list">"Список показаний"</string>
    <string name="m_export">"Экспорт показаний"</string>
    <string name="m_info">"О программе"</string>
    <string name="m_exit">"Выйти"</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="comment">Комментарий</string>
    <string name="value">Показание</string>
    <string name="about">"

            Название - Custodian.

            Автор - Кумов Алексей.

            2016г.

            Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

            Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
        "</string>
    <string name="file_name">Название файла</string>
</resources>
